--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+gtk+2.0 (2.6.1-1) experimental; urgency=low
+
+  * New upstream release.
+
+ -- Sebastien Bacher <seb128@debian.org>  Sun,  9 Jan 2005 14:23:07 +0100
+
 gtk+2.0 (2.6.0-1) experimental; urgency=low
 
   * New upstream release (Closes: #275239).
