--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,11 @@
+gtk+2.0 (2.6.1-2) unstable; urgency=low
+
+  * Upload to unstable.
+  * debian/patches/004_gtkmodules.patch:
+    - don't reverse the order of modules, that fix a crash with the modules.
+
+ -- Sebastien Bacher <seb128@debian.org>  Wed,  2 Feb 2005 18:28:09 +0100
+
 gtk+2.0 (2.6.1-1) experimental; urgency=low
 
   * New upstream release.
