--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,12 @@
+gtk+2.0 (2.6.2-3) unstable; urgency=low
+
+  * Patch from Steve Langasek <vorlon@debian.org>:
+    Add a --disable-testsuite argument to upstream configure, to permit
+    skipping the testsuite on architectures where large static binaries
+    are currently problematic (i.e., mips).  Closes: #295048.
+
+ -- Sebastien Bacher <seb128@debian.org>  Sun, 13 Feb 2005 19:23:39 +0100
+
 gtk+2.0 (2.6.2-2) unstable; urgency=low
 
   * debian/libgtk2.0-bin.postinst:
