--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,11 @@
+gtk+2.0 (2.6.8-1) unstable; urgency=low
+
+  * New upstream version.
+  * debian/patches/003_focus_issues.patch:
+    - fixed with the new version.
+
+ -- Sebastien Bacher <seb128@debian.org>  Thu, 16 Jun 2005 12:52:35 +0200
+
 gtk+2.0 (2.6.7-2) unstable; urgency=low
 
   * Upload to unstable.
