--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,12 @@
+gtk+2.0 (2.6.9-1) unstable; urgency=low
+
+  * New upstream version:
+    - fix the french translation (Closes: #315157).
+  * debian/control.in:
+    - Build-Depends on libxinerama-dev.
+
+ -- Sebastien Bacher <seb128@debian.org>  Wed,  3 Aug 2005 13:53:23 +0200
+
 gtk+2.0 (2.6.8-1) unstable; urgency=low
 
   * New upstream version.
