--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,12 @@
+gtk+2.0 (2.8.3-1) experimental; urgency=low
+
+  * New upstream version:
+    - Fix problems with the handling of initial settings
+      for font options and cursor themes.
+    - Add a --ignore-theme-index option to gtk-update-icon-cache.
+
+ -- Jordi Mallach <jordi@debian.org>  Thu,  1 Sep 2005 19:45:50 +0200
+
 gtk+2.0 (2.8.2-1) experimental; urgency=low
 
   * New upstream version:
