--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+gtk+2.0 (2.6.10-2) UNRELEASED; urgency=low
+
+  * Update FSF address. [debian/copyright]
+
+ -- Loic Minier <lool@dooz.org>  Sat,  3 Sep 2005 10:17:03 +0200
+
 gtk+2.0 (2.6.10-1) unstable; urgency=low
 
   * New upstream version.
