--- a/debian/changelog
+++ b/debian/changelog
@@ -1,8 +1,10 @@
 gtk+2.0 (2.6.10-2) UNRELEASED; urgency=low
 
   * Update FSF address. [debian/copyright]
+  * Remove "Copyright:" line, the whole file expresses the copyright already.
+    (Closes: #323209) [debian/copyright]
 
- -- Loic Minier <lool@dooz.org>  Sat,  3 Sep 2005 10:17:03 +0200
+ -- Loic Minier <lool@dooz.org>  Sat,  3 Sep 2005 10:58:18 +0200
 
 gtk+2.0 (2.6.10-1) unstable; urgency=low
 
