--- a/debian/changelog
+++ b/debian/changelog
@@ -3,8 +3,11 @@ gtk+2.0 (2.6.10-2) UNRELEASED; urgency=low
   * Update FSF address. [debian/copyright]
   * Remove "Copyright:" line, the whole file expresses the copyright already.
     (Closes: #323209) [debian/copyright]
+  * Backport patch from the 2.8 branch removing the warning introduced
+    somewhere in 2.6 when length wraps in calculation in gdk_property_get.
+    (Closes: #315083) [debian/patches/064_gdk-property-get-no-warning.patch]
 
- -- Loic Minier <lool@dooz.org>  Sat,  3 Sep 2005 10:58:18 +0200
+ -- Loic Minier <lool@dooz.org>  Sun,  2 Oct 2005 11:28:33 +0200
 
 gtk+2.0 (2.6.10-1) unstable; urgency=low
 
