--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,15 @@
+gtk+2.0 (2.8.8-1) experimental; urgency=low
+
+  * New upstream version:
+    GtkFileChooser:
+     - Make F2 work for renaming bookmarks
+    GtkEntry:
+     - Turn off input methods in password entries
+    - Other fixes * Documentation improvements
+    - Updated translations
+
+ -- Sebastien Bacher <seb128@debian.org>  Tue, 29 Nov 2005 16:00:32 +0100
+
 gtk+2.0 (2.8.7-1) experimental; urgency=low
 
   * New upstream version.
