--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+gtk+2.0 (2.8.12-1) unstable; urgency=low
+
+  * New upstream bugfix release.
+  * [debian/copyright] Updated FSF's address.
+
+ -- J.H.M. Dassen (Ray) <jdassen@debian.org>  Sun, 12 Feb 2006 14:11:11 +0100
+
 gtk+2.0 (2.8.11-1) unstable; urgency=low
 
   * New upstream version
