--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+gtk+2.0 (2.8.16-1) unstable; urgency=low
+
+  * New upstream version
+
+ -- Sebastien Bacher <seb128@debian.org>  Wed, 15 Mar 2006 19:26:46 +0100
+
 gtk+2.0 (2.8.15-1) unstable; urgency=low
 
   * New upstream version:
