--- a/debian/changelog
+++ b/debian/changelog
@@ -9,12 +9,25 @@ gtk+2.0 (2.8.18-3) experimental; urgency=low
     libgtk+2.0-directfb-dev and  libgtk+2.0-directfb0.
   * Add a new build flavour for directfb (only the shared version).
   * Use chrpath to remove the rpath in the udeb.
-  * Generate a fake shlibs.local to handle all intra-gtk dependencies by 
+  * Generate a fake shlibs.local to handle all intra-gtk dependencies by
     hand.
   * Switch to debhelper compatibility mode 5 and require 5.0.22.
   * Standards-version is 3.7.2.
+  * Break the circular dependency between libgtk2.0-0, libgtk2.0-bin and
+    libgtk2.0-common (closes: #309604).
+    + Remove libgtk2.0-common dependency on libgtk2.0-0.
+    + Remove libgtk2.0-0 dependency on libgtk2.0-bin.
+    + Use ${binary:Version} and ${source:Version} to ensure strict
+      dependencies.
+    + Build-depend on dpkg-dev 1.13.19.
+    + Invert the libgtk2.0-common -> libgtk2.0-0 symbolic link.
+    + libgtk2.0-common.preinst, libgtk2.0-0.postinst: dance the symbolic
+      link samba.
+    + Move support binaries and scripts to libgtk2.0-0 and make
+      libgtk2.0-bin a binary-all package containing only scripts.
+    + Move /usr/sbin/update-* calls to libgtk2.0-0.
 
- -- Josselin Mouette <joss@debian.org>  Mon, 26 Jun 2006 08:20:44 +0200
+ -- Josselin Mouette <joss@debian.org>  Mon, 26 Jun 2006 18:05:21 +0200
 
 gtk+2.0 (2.8.18-2) UNRELEASED; urgency=low
 
