--- a/debian/changelog
+++ b/debian/changelog
@@ -26,8 +26,9 @@ gtk+2.0 (2.8.18-3) experimental; urgency=low
     + Move support binaries and scripts to libgtk2.0-0 and make
       libgtk2.0-bin a binary-all package containing only scripts.
     + Move /usr/sbin/update-* calls to libgtk2.0-0.
+    + update-*: call binaries at their new location.
 
- -- Josselin Mouette <joss@debian.org>  Mon, 26 Jun 2006 18:05:21 +0200
+ -- Josselin Mouette <joss@debian.org>  Mon, 26 Jun 2006 18:09:33 +0200
 
 gtk+2.0 (2.8.18-2) UNRELEASED; urgency=low
 
