--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+gtk+2.0 (2.8.18-5) UNRELEASED; urgency=low
+
+  * Set Priority to extra to sync with overrides.
+
+ -- Loic Minier <lool@dooz.org>  Fri, 30 Jun 2006 21:23:03 +0200
+
 gtk+2.0 (2.8.18-4) experimental; urgency=low
 
   * Bump libcairo build dependencies.
