--- a/debian/changelog
+++ b/debian/changelog
@@ -1,8 +1,13 @@
 gtk+2.0 (2.8.18-5) UNRELEASED; urgency=low
 
+  [ Loic Minier ]
   * Set Priority to extra to sync with overrides.
 
- -- Loic Minier <lool@dooz.org>  Fri, 30 Jun 2006 21:23:03 +0200
+  [ Josselin Mouette ]
+  * Set priority to extra for the udeb.
+  * Bump build dependencies for libcairo to the stable version.
+
+ -- Josselin Mouette <joss@debian.org>  Sun,  2 Jul 2006 23:13:29 +0200
 
 gtk+2.0 (2.8.18-4) experimental; urgency=low
 
