--- a/debian/changelog
+++ b/debian/changelog
@@ -8,8 +8,10 @@ gtk+2.0 (2.8.18-5) unstable; urgency=low
   * Bump build dependencies for libcairo to the stable version.
   * Lots of cleanup in debian/rules.
   * Rename directfb packages to libgtk-directfb-2.0-*.
+  * Move .a and .la files from the engine package to the development 
+    package.
 
- -- Josselin Mouette <joss@debian.org>  Sun, 30 Jul 2006 12:13:09 +0200
+ -- Josselin Mouette <joss@debian.org>  Sun, 30 Jul 2006 14:04:49 +0200
 
 gtk+2.0 (2.8.18-4) experimental; urgency=low
 
