--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+gtk+2.0 (2.8.18-6) unstable; urgency=low
+
+  * 005_implicit_pointer_conversion.patch: patch from Dann Frazier to 
+    fix implicit pointer conversion errors on 64-bit architectures.
+
+ -- Josselin Mouette <joss@debian.org>  Wed,  2 Aug 2006 14:48:54 +0200
+
 gtk+2.0 (2.8.18-5) unstable; urgency=low
 
   [ Loic Minier ]
